--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .navBtn {
+    @apply h-5 sm:h-6 cursor-pointer transition-all duration-150 ease-out hover:scale-125 inline-flex;
+  }
+
+  .btn {
+    @apply h-7 cursor-pointer transition-all duration-150 ease-out hover:scale-125;
+  }
+}
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
